# RAG-Book-Storage

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/dataset_evaluation/: ground_truth_dataset.csv
data/raw/: _ICSA_2026__Argus_Architecture.json
data/raw/json_extraction/: Argus_Agentic_System.json  ESE_journal_Erlon.json  atoms_confusion.json  s00521-025-11716-2.json
data/raw/markdown_extraction/: Argus_Agentic_System.md  ESE_journal_Erlon.md  _ICSA_2026__Argus_Architecture.md  atoms_confusion.md  s00521-025-11716-2.md
docs/: GUIA_COLAB_DOLPHIN.md  PLANO_DE_ACAO.md
layout/: excalidraw.excalidraw
src/: .env.example  __init__.py  docker-compose.yml
src/config/: __init__.py  logger.py  opensearch_chunk_search_schema.json  opensearch_mapping.json  opensearch_metadata_search_schema.json  settings.py
src/ingestion/: __init__.py  main.py  run_ingestion.py
src/ingestion/processors/: __init__.py  (+4 more)
src/rag/: __init__.py  build_graph.py
src/services/: __init__.py  embedding_processor.py  guardrail_service.py  llm_factory.py  opensearch.py
src/utils/: DolphinFilter.py  FilterChunkGeneration.py  FilterTitleSearch.py
test/evaluation/: dataset_generator.py  output_strutured.py
test/random_test/: MarkdownConvert.ipynb  filter_dolphin.ipynb
tests/evaluation/: build_rag_engine.py  dataset_generator.py  prompts_eval.py
tests/random_test/: composer_agents_step2.ipynb  eval_dataset.ipynb  final_composer_graph.ipynb  ingest_content.ipynb  ragas_fix.py  ragas_init.ipynb  search_examples_vector.ipynb  semantic_7_lexical_0.csv
(+20 files in other folders)
